<resources>
    <string name="app_name">Neura Sample</string>

    <string name="app_uid">dae8c58c0d6860bb828b25c01f99889bb719513063558e4b5882a4c8c5cb8015</string>
    <string name="app_secret">00f7e687db22aa21c965a1754dcf1f24746129a054dac5f06dfa4e356eb303e3</string>

    <!-- go to our guide : https://dev.theneura.com/docs/guide/android/pushnotification
    in order to fetch your project's project number-->
    <string name="google_api_project_number">367986524672</string>

    <!-- fragment main strings -->
    <string name="app_permissions_list">Permissions List</string>
    <string name="connect_request_permissions">Connect and request permissions</string>
    <string name="your_neura">My Neura</string>
    <string name="edit_subscriptions">Edit Subscriptions</string>
    <string name="disconnect_from_neura">Disconnect</string>
    <string name="neura_status">Neura status:</string>
    <string name="neura_status_disconnected">Disconnected</string>
    <string name="neura_status_connected">Connected</string>
    <string name="services">Services</string>

    <!-- fragment permissions list -->
    <string name="permissions_header">This app is allowed to request the following permissions:</string>
    <string name="permissions_footer">Permissions list can be edited in Neura Developer Console</string>
    <string name="permissions_subscribe_title">Enable or disable subscriptions based on the permissions approved:</string>

    <!-- fragment add device -->
    <string name="get_devices">Get All Available Devices</string>
    <string name="has_devices_with_capabilities">Has Devices With Capability</string>
    <string name="get_capabilities">Get Capabilities</string>
    <string name="add_device_general">Add a device</string>
    <string name="add_device_capabilities">Add a device by capability</string>
    <string name="add_device_name">Add a device by name</string>
</resources>
