<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

    <RelativeLayout
        style="@style/neura_sdk_auth_layout"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/neura_sdk_demo_logo" />

        <LinearLayout
            android:id="@+id/get_devices_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <!-- Get all available devices -->
                <com.neura.dashboard.view.widget.RobotoLightTextView
                    android:id="@+id/get_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Receive a list of all supported devices" />

                <com.neura.dashboard.view.widget.RobotoButton
                    android:id="@+id/get_devices_button"
                    style="@style/neura_sdk_auth_button"
                    android:layout_below="@id/get_devices"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/neura_sdk_blue_btn"
                    android:elevation="1dp"
                    android:text="@string/get_devices"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <!-- Get capabilities -->
                <com.neura.dashboard.view.widget.RobotoLightTextView
                    android:id="@+id/get_capabilities_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Receive a list of all supported capabilities" />

                <com.neura.dashboard.view.widget.RobotoButton
                    android:id="@+id/get_capabilities_button"
                    style="@style/neura_sdk_auth_button"
                    android:layout_below="@id/get_capabilities_text"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/neura_sdk_blue_btn"
                    android:elevation="1dp"
                    android:text="@string/get_capabilities"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>

        <!-- Do you have a device with a capability? -->
        <com.neura.dashboard.view.widget.RobotoLightTextView
            android:id="@+id/has_device_with_capability_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_devices_layout"
            android:layout_marginTop="40dp"
            android:text="Returning if your user has a added a device with this specific capability" />

        <EditText
            android:id="@+id/has_device_with_capability_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/has_device_with_capability_text"
            android:hint="For example : sleepQuality"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <com.neura.dashboard.view.widget.RobotoButton
            android:id="@+id/has_device_with_capability_button"
            style="@style/neura_sdk_auth_button"
            android:layout_below="@id/has_device_with_capability_edit"
            android:layout_marginTop="3dp"
            android:background="@color/neura_sdk_blue_btn"
            android:elevation="1dp"
            android:text="@string/has_devices_with_capabilities"
            android:textColor="@android:color/white" />

        <com.neura.dashboard.view.widget.RobotoLightTextView
            android:id="@+id/add_device_general_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/has_device_with_capability_button"
            android:layout_marginTop="40dp"
            android:text="Show a list of all supported devices" />

        <com.neura.dashboard.view.widget.RobotoButton
            android:id="@+id/add_device_general"
            style="@style/neura_sdk_auth_button"
            android:layout_below="@id/add_device_general_text"
            android:layout_marginTop="3dp"
            android:background="@color/neura_sdk_blue_btn"
            android:elevation="1dp"
            android:text="@string/add_device_general"
            android:textColor="@android:color/white" />

        <!-- Add device by capabilities -->
        <com.neura.dashboard.view.widget.RobotoLightTextView
            android:id="@+id/add_device_capabilities_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_device_general"
            android:layout_marginTop="40dp"
            android:text="Show a list of devices with the capabilities specified below" />

        <EditText
            android:id="@+id/add_device_capabilities_capabilities_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_device_capabilities_text"
            android:hint="For example : sleepQuality, heartRateMeasurement"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <com.neura.dashboard.view.widget.RobotoButton
            android:id="@+id/add_device_capabilities"
            style="@style/neura_sdk_auth_button"
            android:layout_below="@id/add_device_capabilities_capabilities_list"
            android:layout_marginTop="3dp"
            android:background="@color/neura_sdk_blue_btn"
            android:elevation="1dp"
            android:text="@string/add_device_capabilities"
            android:textColor="@android:color/white" />

        <!-- Device by device id -->

        <com.neura.dashboard.view.widget.RobotoLightTextView
            android:id="@+id/add_device_specific_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_device_capabilities"
            android:layout_marginTop="40dp"
            android:text="Add a specific device by entering its name below. Note that authorization webview required for connecting the device might still be shown." />

        <EditText
            android:id="@+id/add_device_specific_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_device_specific_text"
            android:hint="Enter Device Name"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <com.neura.dashboard.view.widget.RobotoButton
            android:id="@+id/add_device_specific"
            style="@style/neura_sdk_auth_button"
            android:layout_below="@id/add_device_specific_id"
            android:layout_marginTop="3dp"
            android:background="@color/neura_sdk_blue_btn"
            android:elevation="1dp"
            android:text="@string/add_device_name"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>